Updated index.html favicon link and added apm class

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--link rel="shortcut icon" type="image/icon" href="favicon.ico"></link-->
+	<link rel="shortcut icon" type="image/icon" href="favicon.ico"></link>
 	<link rel="stylesheet" href="css/normalize.css" type="text/css"></link>
 	<link rel="stylesheet" href="css/style.css" type="text/css"></link>
 	<title>Single Price Grid Component</title>
@@ -20,7 +20,7 @@
 		<div class='subwhy'>
 			<div class='subscription'> 
 				<h3>Monthly Subscription</h3>
-				<p><span>$29 </span>per month</p>
+				<p class='apm'><span>$29 </span>per month</p>
 				<p>Full access for less than $1 a day</p>
 				<button>Sign Up</button>
 			</div>
