Made changes to index.html div structure and completed css

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 			<div class='subscription'> 
 				<h3>Monthly Subscription</h3>
 				<p class='apm'><span>$29 </span>per month</p>
-				<p>Full access for less than $1 a day</p>
-				<button>Sign Up</button>
+				
+				<div>
+					<p>Full access for less than $1 a day</p>
+					<button>Sign Up</button>
+				</div>
 			</div>
 
 			<div class='whyus'> 
